# constrained-diffusion-LM

./: .gitignore  README.md  pyproject.toml
backend/: api.py  gradio_app_react.py
configs/: eval.yaml  train.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx
scripts/: __init__.py  demo_conditional_edit.py  demo_constrained_corruption.py  demo_constrained_loss.py  demo_constraints.py  demo_corruption.py  demo_dataloader.py  edit_demo.py  evaluate.py  gradio_app.py  sample.py  train.py  train_timestep.py
src/constrained_diffusion_lm/: __init__.py
src/constrained_diffusion_lm/conditioning/: __init__.py  prompt_encoder.py
src/constrained_diffusion_lm/data/: __init__.py  constraints.py  corruption.py  datasets.py  tokenization.py
src/constrained_diffusion_lm/diffusion/: __init__.py  q_forward.py  sampler.py  schedule.py
src/constrained_diffusion_lm/eval/: __init__.py  edit_metrics.py
src/constrained_diffusion_lm/inference/: __init__.py  edit.py  generate.py
src/constrained_diffusion_lm/models/: __init__.py  bert_diffusion.py  diffusion_head.py  transformer.py
src/constrained_diffusion_lm/training/: __init__.py  losses.py  trainer.py
src/constrained_diffusion_lm/utils/: __init__.py  logging.py  seed.py
